--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/vivek286/CODE__PAIR#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongod": "^2.0.0",
-    "mongoose": "^5.12.3",
+    "mongoose": "^5.12.13",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
     "socket.io": "^4.1.2"
   }
 }
