--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongod": "^2.0.0",
+    "mongodb": "^3.6.8",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
